fixed layout issues of sticker and projects section

--- a/home/style.css
+++ b/home/style.css
@@ -2,8 +2,8 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden;
     padding-top: 32px;
+    overflow-x: hidden;
 }
 
 .header {
@@ -316,7 +316,7 @@ body, html {
     line-height: 40px;
     white-space: nowrap;
     padding-right: 100%;
-    padding-left: 90px; /* Add space for the protruding div */
+    padding-left: 90px;
     box-sizing: content-box;
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
@@ -558,19 +558,23 @@ body, html {
 }
 
 .protruding-div {
-    position: fixed;
-    left: 0;
-    top: 80%;
+    position: absolute;
+    left: 30px;
+    top: 73.5%;
     transform: translateY(-50%) scale(1.2);
     width: 60px;
     height: 60px;
-    z-index: 10;
+    z-index: 9999;
     padding: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 30px;
-}
+    pointer-events: none;
+  }
+  
+  .protruding-div img {
+    pointer-events: auto;
+  }
 
 .protruding-div img {
     position: absolute;
@@ -611,7 +615,7 @@ body, html {
     line-height: 40px;
     white-space: nowrap;
     padding-right: 100%;
-    padding-left: 90px; /* Add space for the protruding div */
+    padding-left: 90px;
     box-sizing: content-box;
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
@@ -725,5 +729,69 @@ body, html {
 
     .ticker {
         padding-left: 70px;
+    }
+}
+
+.projects-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 1px;
+    background-color: #f0f0f0;
+    max-height: calc(100vh - 100px);
+    overflow-y: auto;
+    font-family: 'Archivo', sans-serif;
+}
+
+.project-item {
+    flex-grow: 1;
+    flex-basis: calc(40% - 1px);
+    display: flex;
+    background-color: white;
+    height: 160px;
+    min-width: 200px;
+}
+
+.project-rover {
+    flex-grow: 1;
+    flex-basis: calc(40% - 1px);
+    display: flex;
+    background-color: white;
+    height: 160px;
+    min-width: 200px;
+}
+
+.project-image {
+    width: 40%;
+    object-fit: cover;
+}
+
+.project-content {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.project-title {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.project-description {
+    font-size: 12px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+@media (max-width: 768px) {
+    .project-item {
+        flex-basis: 100%;
     }
 }
